--- a/app/src/main/res/layout/activity_numero_inc.xml
+++ b/app/src/main/res/layout/activity_numero_inc.xml
@@ -6,21 +6,25 @@
     android:padding="16dp"
     tools:context=".NumeroIncActivity">
 
-    <Button
-        android:id="@+id/buttonInc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginVertical="200dp"
-        android:onClick="onIncButtonClick"
-        android:text="@string/Increment" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textViewNum"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|center_vertical"
-        android:layout_marginVertical="300 sp"
-        android:text="@string/Numero" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|center_horizontal"
+            android:layout_marginVertical="100sp"
+            android:text="@string/Numero" />
 
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:onClick="onIncButtonClick"
+            android:text="@string/Incrementar" />
+    </LinearLayout>
 </FrameLayout>
