Intento de examen que empece muy tarde

--- a/app/src/main/res/layout/activity_numero_inc.xml
+++ b/app/src/main/res/layout/activity_numero_inc.xml
@@ -26,5 +26,12 @@
             android:layout_gravity="center"
             android:onClick="onIncButtonClick"
             android:text="@string/Incrementar" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/goToReset" />
     </LinearLayout>
 </FrameLayout>
